# A-firma

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.streamlit/: config.toml
agent/: README.md
analysis/: evaluate_walk_metrics.py  hypercube_hitting_vs_sim.py  project_walk_embeddings.py
analysis/metrics_output/: autocorr.npy  diffusion.npy
dados/: __init__.py
dados/brutos/: __init__.py
dados/configs/: data_pipeline_finance.json  data_pipeline_health.json  data_pipeline_logistics.json  data_pipeline_physics.json  live_forecast_template.json  pipeline_aapl.json  pipeline_crypto_focus.json  pipeline_example.json  pipeline_new_assets.json  pipeline_yf.json  pipeline_yf_part1.json  pipeline_yf_part2.json  pipeline_yf_sol.json  targets_finance.json  targets_health.json  targets_logistics.json
gaq/: __init__.py
gaq/analysis/: __init__.py  hypercube_walks.py
gaq/backends/: mps.py  ptm.py  stab.py
gaq/core/: __init__.py  channels.py  povm.py  two_qubits.py
gaq/examples/: demo_noise_rc.py  demo_walk_small.py  geom_walk_optimizer.py
gaq/tests/: __init__.py  test_born.py  test_metrics.py  test_scaling.py
scripts/: evaluate_walk_forecasts.py  plot_market_phases.py  run_daily_live_forecast.py  run_financial_analysis.py  run_graph_discovery_finance.py  run_graph_discovery_health.py  run_graph_discovery_logistics.py  run_graph_discovery_physics.py  run_metric_health.py  run_metric_logistics.py  run_pipeline.py
scripts/estudos/: evaluate_walk_metrics.py  make_report.py  project_walk_embeddings.py  run_benchmarks.py  stress_pipeline.py
(+24 files in other folders)
