[project]
name = "gaq"
version = "0.1.0"
description = "Geometric Algebra for Qubits"
authors = [{name = "GAQ authors"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["modelos"]
include = ["gaq*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["modelos/core", "modelos"]
testpaths = ["modelos/gaq/tests", "modelos/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["modelos/gaq"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
packages = ["gaq"]
strict_optional = true
warn_unused_configs = true
